# DNSCache

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_xcode.sh  run_example.sh
examples/: CMakeLists.txt  example_dns_cache.cpp
lib/: CMakeLists.txt
lib/include/core/: flat_llrb_map.hpp  flat_map.hpp  ladder.hpp  singleton.hpp  types.hpp
lib/include/net/: dns_cache.hpp  dns_cache_singleton.hpp  types.hpp  util.hpp
lib/src/net/: dns_cache.cpp  util.cpp
tests/: CMakeLists.txt  ut_dns_cache.cpp
